Add legend Added 1 style to style.css for legend text Used 1 SVG + 1 p for each actor

--- a/TP2/src/assets/style.css
+++ b/TP2/src/assets/style.css
@@ -105,6 +105,12 @@ button:hover, button:active {
     padding: 10px;
 }
 
+.legend-text {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 2px;
+}
+
 #tooltip-title {
     font-family: 'Grenze Gotisch';
     font-weight: normal;
