--- a/Projet/src/assets/style.css
+++ b/Projet/src/assets/style.css
@@ -11,6 +11,10 @@ body {
 
 main {
   height: 100%;
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
 }
 
 h1 {
@@ -18,6 +22,26 @@ h1 {
   text-align: center;
   margin-top: 1.5rem;
   font-weight: normal;
+}
+
+#spinner {
+  border: 10px solid #f7f7f7;
+  border-top: 10px solid rgb(4, 97, 204);
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+#viz-container {
+  visibility: hidden;
+  top: 70;
+  position: absolute;
 }
 
 h3 {
