Fix counter error in data Was causing circle attribute not found error

--- a/Projet/src/assets/style.css
+++ b/Projet/src/assets/style.css
@@ -25,8 +25,8 @@ h1 {
 }
 
 #spinner {
-  border: 10px solid #f7f7f7;
-  border-top: 10px solid rgb(4, 97, 204);
+  border: 10px solid #d8dbe3;
+  border-top: 10px solid rgb(18, 81, 153);
   border-radius: 50%;
   width: 100px;
   height: 100px;
