Fix issues in other years NaN issue in lineChartData Area chart now hidden when data not available

--- a/Projet/src/assets/style.css
+++ b/Projet/src/assets/style.css
@@ -85,3 +85,11 @@ h3 {
   transform-box: fill-box;
   text-anchor: middle;
 }
+
+.empty-label {
+  font-size: 14px;
+  fill: #505050;
+  transform-origin: center;
+  transform-box: fill-box;
+  text-anchor: middle;
+}
