--- a/Projet/src/assets/style.css
+++ b/Projet/src/assets/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Helvetica', 'sans-serif';
+  font-family: 'Poppins', 'sans-serif';
   font-size: 16px;
   background-color: #ffffff;
   color: #000000;
