--- a/Projet/src/assets/style.css
+++ b/Projet/src/assets/style.css
@@ -57,11 +57,6 @@ h3 {
   align-items: center;
 }
 
-.main-svg {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
 #dropdown {
   flex: 0;
   margin-left: 8;
@@ -69,9 +64,17 @@ h3 {
 }
 
 .graph {
+  margin-top: 30px;
+  margin-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 2px 2px 8px 2px rgba(2, 11, 33,0.5);
+}
+
+.main-svg {
+  margin: 20px;
+
 }
 
 .graph-title {
