--- a/Projet/src/assets/style.css
+++ b/Projet/src/assets/style.css
@@ -55,6 +55,8 @@ h3 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  position: sticky;
+  top: 5rem;
 }
 
 #dropdown {
