Add neighborhood data to map Also rework colors and animations

--- a/Projet/src/assets/style.css
+++ b/Projet/src/assets/style.css
@@ -26,7 +26,7 @@ h1 {
 
 #spinner {
   border: 10px solid #d8dbe3;
-  border-top: 10px solid rgb(18, 81, 153);
+  border-top: 10px solid #f58516;
   border-radius: 50%;
   width: 100px;
   height: 100px;
