--- a/Projet/src/assets/style.css
+++ b/Projet/src/assets/style.css
@@ -151,3 +151,22 @@ h1 {
 .label {
   font-size: 10px;
 }
+
+.tooltip {
+  border-radius: 10px;
+  box-shadow: 1px 1px 6px 2px rgba(2, 11, 33,0.5);
+  padding: 10px;
+}
+
+.counter-tooltip {
+  background-color: #ffffff;
+  margin-bottom:20px;
+}
+
+.neighborhood-tooltip {
+  background-color: #ffffff
+}
+
+.tooltip-value {
+  margin: 1px;
+}
